--- a/src/main/resources/templates/estado.html
+++ b/src/main/resources/templates/estado.html
@@ -1,15 +1,39 @@
-<!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
-<html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+<!DOCTYPE html><html xmlns:th="http://www.thymeleaf.org">    
+    <head th:replace="../static/index.html"></head>    
+    <body>        
+ 
+        <h1 th:text="${titulo}"></h1>              
+        <table class="table table-dark table-striped">            
+            <thead class="thead-dark">                
+                <tr>                    
+                    <th scope="col">Id</th>                    
+                    <th scope="col">Pais </th>                    
+                    <th scope="col">Codigo Tel</th>                    
+                    <th scope="col">Cod Pais</th>                    
+                    <th scope="col">Capital </th>                                    
+                    <th scope="col">Editar </th>                    
+                    <th scope="col">Eliminar </th>                
+                </tr>            
+            </thead>      
+            
+            <tbody>            
+            <th:block th:each="user : ${estado}">                
+                <tr>                    
+                    <td th:text="${user.getCountry_id}"></td>                    
+                    <td th:text="${user.getCountry_name}"></td>                    
+                    <td th:text="${user.getPhone_code}"></td>                    
+                    <td th:text="${user.getCountry_code}"></td>                    
+                    <td th:text="${user.getCapital}"></td>                                     
+                    <td>                        
+                        <a th:href="@{/editEstado/{country_id}(country_id=${user.getCountry_id})}">Edit</a>                    
+                    </td>                    
+                    <td>                        
+                        <a th:href="@{/delete/{country_id}(country_id=${user.getCountry_id})}">Delete</a>                    
+                    </td>                
+                </tr>            
+            </th:block>        
+        </tbody>    
+    </table>   
+</body>
+
 </html>
